--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "man": "./doc/man"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
